Controllers refactoring for Eloquent

--- a/views/chunks/header.twig
+++ b/views/chunks/header.twig
@@ -28,6 +28,9 @@
                         <a class="dropdown-item" href="/books/filters">4. Filter/sort books</a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <a href="/login" class="btn btn-outline-info">Log In</a>
+                </li>
             </ul>
         </div>
     </div>
