--- a/views/chunks/header.twig
+++ b/views/chunks/header.twig
@@ -12,25 +12,38 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
         <a class="navbar-brand" href="/">PHPBooks task</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Select task:
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/">1. Show all books</a>
-                        <a class="dropdown-item" href="/books/pagination">2. Books pagination</a>
-                        <a class="dropdown-item" href="/books/search">3. Search a book</a>
-                        <a class="dropdown-item" href="/books/filters">4. Filter/sort books</a>
+                        {% if cookieHas('is_authorized') and cookieGet('is_authorized') is same as('1') %}
+                            <a class="dropdown-item" href="/admin">Admin dashboard</a>
+                            <div class="dropdown-divider"></div>
+                        {% endif %}
+                        <a class="dropdown-item" href="/">Show all books</a>
+                        <a class="dropdown-item" href="/books/pagination">Books pagination</a>
+                        <a class="dropdown-item" href="/books/search">Search a book</a>
+                        <a class="dropdown-item" href="/books/filters">Filter/sort books</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a href="/login" class="btn btn-outline-info">Log In</a>
-                </li>
+
+                {% if cookieHas('is_authorized') and cookieGet('is_authorized') is same as('1') %}
+                    <li class="nav-item">
+                        <a href="/logout" class="btn btn-outline-info">Log Out</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a href="/login" class="btn btn-outline-info">Log In</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
