--- a/views/admin/books/edit.twig
+++ b/views/admin/books/edit.twig
@@ -13,37 +13,36 @@
 
             <form action="/admin/books/{{ book.id }}/update" method="POST" class="m-3">
                 <div class="form-group">
-                    <label for="isbn">ISBN:</label>
+                    <label for="isbn">ISBN <span class="text-danger">*</span></label>
                     <input type="number" name="isbn" value="{{ book.isbn }}" class="form-control form-control-sm" id="isbn"
                            placeholder="Enter ISBN number" required>
                 </div>
                 <div class="form-group">
-                    <label for="name">Name:</label>
+                    <label for="name">Name <span class="text-danger">*</span></label>
                     <input type="text" name="name" value="{{ book.name }}" class="form-control form-control-sm" id="name"
                            placeholder="Enter name" required>
                 </div>
                 <div class="form-group">
-                    <label for="tags">Tags:</label>
+                    <label for="tags">Tags</label>
                     <p class="small text-muted">Select one or more by Ctrl + Left click</p>
-                    <select multiple name="tags" class="form-control form-control-sm" id="tags">
-{#                        TODO mark tag as selected if it is attached to book #}
+                    <select multiple name="tags[]" class="form-control form-control-sm" id="tags">
                         {% for tag in tags %}
-                            <option value="{{ tag.id }}">{{ tag.name }}</option>
+                            <option value="{{ tag.id }}" {% if book.hasTag(tag.id) %}selected{% endif %}>{{ tag.name }}</option>
                         {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="price">Price:</label>
+                    <label for="price">Price <span class="text-danger">*</span></label>
                     <input type="number" name="price" value="{{ book.price }}" min="1" class="form-control form-control-sm" id="price"
                            placeholder="Enter price" required>
                 </div>
                 <div class="form-group">
-                    <label for="url">Url:</label>
+                    <label for="url">Url <span class="text-danger">*</span></label>
                     <input type="text" name="url" value="{{ book.url }}" class="form-control form-control-sm" id="url"
                            placeholder="Enter url" required>
                 </div>
                 <div class="form-group">
-                    <label for="poster">Poster url:</label>
+                    <label for="poster">Poster url <span class="text-danger">*</span></label>
                     <input type="text" name="poster" value="{{ book.poster }}" class="form-control form-control-sm" id="poster"
                            placeholder="Enter poster url" required>
                 </div>
