--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -34,17 +34,17 @@
                 <div class="tab-pane fade show active" id="nav-add_new_book">
                     <form action="/admin/books/store" method="POST" class="m-3">
                         <div class="form-group">
-                            <label for="isbn">ISBN:</label>
+                            <label for="isbn">ISBN <span class="text-danger">*</span></label>
                             <input type="number" name="isbn" class="form-control form-control-sm" id="isbn"
                                    placeholder="Enter ISBN number" required>
                         </div>
                         <div class="form-group">
-                            <label for="name">Name:</label>
+                            <label for="name">Name <span class="text-danger">*</span></label>
                             <input type="text" name="name" class="form-control form-control-sm" id="name"
                                    placeholder="Enter name" required>
                         </div>
                         <div class="form-group">
-                            <label for="tags">Tags:</label>
+                            <label for="tags">Tags</label>
                             <p class="small text-muted">Select one or more by Ctrl + Left click</p>
                             <select multiple name="tags[]" class="form-control form-control-sm" id="tags">
                                 {% for tag in tags %}
@@ -53,17 +53,17 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="price">Price:</label>
+                            <label for="price">Price <span class="text-danger">*</span></label>
                             <input type="number" name="price" min="1" class="form-control form-control-sm" id="price"
                                    placeholder="Enter price" required>
                         </div>
                         <div class="form-group">
-                            <label for="url">Url:</label>
+                            <label for="url">Url <span class="text-danger">*</span></label>
                             <input type="text" name="url" class="form-control form-control-sm" id="url"
                                    placeholder="Enter url" required>
                         </div>
                         <div class="form-group">
-                            <label for="poster">Poster url:</label>
+                            <label for="poster">Poster url <span class="text-danger">*</span></label>
                             <input type="text" name="poster" class="form-control form-control-sm" id="poster"
                                    placeholder="Enter poster url" required>
                         </div>
