--- a/views/books/index.twig
+++ b/views/books/index.twig
@@ -13,7 +13,7 @@
                     <div class="row">
                         {% for book in books %}
                             <div class="col-md-3">
-                                <div class="card h-620">
+                                <div class="card min-h-620">
                                     <img class="img-fluid min-h-320" src="{{ book.poster }}"
                                          alt="{{ book.name }}">
                                     <div class="card-body">
