--- a/views/books/filters/index.twig
+++ b/views/books/filters/index.twig
@@ -80,7 +80,7 @@
                 {% if books is not empty %}
                     {% for book in books %}
                         <div class="col-md-3">
-                            <div class="card h-620">
+                            <div class="card min-h-620">
                                 <img class="img-fluid min-h-320" src="{{ book.poster }}" alt="{{ book.name }}">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ book.name }}</h5>
