--- a/views/books/search/index.twig
+++ b/views/books/search/index.twig
@@ -27,7 +27,7 @@
                         <div class="row">
                             {% for result in searchResult %}
                                 <div class="col-md-3">
-                                    <div class="card h-620">
+                                    <div class="card min-h-620">
                                         <img class="img-fluid min-h-320" src="{{ result.poster }}"
                                              alt="{{ result.name }}">
                                         <div class="card-body">
